--- a/android-razor/app/src/main/res/values/strings.xml
+++ b/android-razor/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="facebook_app_id">1711030452551778</string>
 
 </resources>
