--- a/android-razor/app/src/main/res/values/strings.xml
+++ b/android-razor/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="facebook_app_id">1711030452551778</string>
 
+    <string name="delete_record_sessions">Delete Record Sessions</string>
 </resources>
